update footer and home page

--- a/home.html
+++ b/home.html
@@ -48,8 +48,8 @@
         <div class="masthead-content">
             <div class="container px-5">
                 <h1 class="masthead-heading mb-0">Selfcare.</h1>
-                <h3 class="masthead-subheading mb-0">Given yourself the same care & attention</h3>
-                <h3 class="masthead-subheading mb-0">And watch ourself bloom.</h3>
+                <h3 class="masthead-subheading mb-0">Give yourself the same care & attention.</h3>
+                <h3 class="masthead-subheading mb-0">And watch yourself bloom.</h3>
 
             </div>
         </div>
@@ -66,16 +66,16 @@
         <div class="container py-5">
             <div class="row py-4">
                 <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="/assets/img" alt="" width="180" class="mb-3">
-                    <h3>About Us</h3>
+                    <h3 style="color: #ef6c6c;">About Us</h3>
                     <p class="font-italic text-muted">
-                    <p></p>Ikshana<br>
+                    <p style="font-size: 14px; text-align: justify; padding-right: 50px; color: rgba(43, 43, 43, 0.851);">Ikshana<br>
                     This is a gentle reminder to pause for a moment and have an honest check-in with yourself about whether
-                or not you've been taking time for self-care. Don't be hard on yourself.<br> Self care goes way beyond
-                following 10 things to do in order to feel better about oneself. One can opt for personalised,
-                resonating ways to offer herself/himself what she/he needs the most; attunement, acceptance, validation
-                and love.</p>
+                    or not you've been taking time for self-care. Don't be hard on yourself.<br> Self care goes way beyond
+                    following 10 things to do in order to feel better about oneself. One can opt for personalised,
+                    resonating ways to offer herself/himself what she/he needs the most; attunement, acceptance, validation
+                    and love.</p></p>
                 </div>
-                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0" style="color: #fb4f5e;">
+                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0" style="color: #ef6c6c;">
                     <h6 class="text-uppercase font-weight-bold mb-4"></h6>
                     <ul class="list-unstyled mb-0">
                         <li class="mb-2"><a href="home.html" class="text-muted">Home</a></li>
@@ -83,7 +83,7 @@
                         <li class="mb-2"><a href="login/login.html" class="text-muted">Sign in/ SIgn Up</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0" style="color: #fb4f5e;">
+                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0" style="color: #ef6c6c;">
                     <h6 class="text-uppercase font-weight-bold mb-4">Features</h6>
                     <ul class="list-unstyled mb-0">
                         <li class="mb-2"><a href="period tracker/index.html" class="text-muted">Period Tracker</a></li>
@@ -98,28 +98,28 @@
                         <li class="mb-2"><a href="playlist/index.html" class="text-muted">Mood Based Playlist</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-lg-0" style="color: #fb4f5e;">
+                <div class="col-lg-4 col-md-6 mb-lg-0" style="color: #ef6c6c;">
                     <h6 class="text-uppercase font-weight-bold mb-4">Our Team</h6>
                     <div class="pers">
                         <div class="pe">
-                            <img src="https://pbs.twimg.com/profile_images/969390093411774465/uJ5LaoyJ_400x400.jpg"
-                                alt="rafeh">
-                            <div class="p-name">Ayushi Singh</div>
-                            <div class="p-sm">
-                                <a href="https://github.com/Ayushi8989"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <img src="/assets/ayushi.jpg" style="width: 120px; height: 150px; object-fit: cover; object-position: 10% 30%;"
+                                alt="Ayushi Singh">
+                            <div class="p-name" style="color: rgb(208, 49, 78); font-weight: bold;">Ayushi Singh</div>
+                            <div class="p-sm" style="color: #ef6c6c;">
+                                <a href="https://github.com/Ayushi8989" target="blank" style="color: #ef6c6c;"><i class="fab fa-github"></i></a>
+                                <a href="#" target="blank" style="color: #ef6c6c;"><i class="fab fa-twitter"></i></a>
+                                <a href="#" target="blank" style="color: #ef6c6c;"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
 
                         <div class="pe">
-                            <img src="https://pbs.twimg.com/profile_images/969390093411774465/uJ5LaoyJ_400x400.jpg"
-                                alt="rafeh">
-                            <div class="p-name">Oindrila Das</div>
+                            <img src="/assets/oindrila.jpg"
+                                alt="Oindrila Das">
+                            <div class="p-name" style="color: rgb(208, 49, 78); font-weight: bold;">Oindrila Das</div>
                             <div class="p-sm">
-                                <a href="https://github.com/OindrilaDas27"><i class="fab fa-github"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://github.com/OindrilaDas27" target="blank" style="color: #ef6c6c;"><i class="fab fa-github"></i></a>
+                                <a href="https://twitter.com/Ame2663" target="blank" style="color: #ef6c6c;"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com/in/oindriladas02/" target="blank" style="color: #ef6c6c;"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
 
