--- a/pride/pride.html
+++ b/pride/pride.html
@@ -13,7 +13,7 @@
         <div class="card 1">
           <div class="card_image"> <img src="pride.jpg"/> </div>
           <div class="card_title title-white">
-            <a href="pride quiz/quiz.html"></a><button class="btn-hover color-1">Take a quiz</button></a>
+            <a href="pride quiz/quiz.html"><button class="btn-hover color-1">Take a quiz</button></a>
           </div>
         </div>
         
