update period and pregnancy tracker

--- a/features.html
+++ b/features.html
@@ -83,8 +83,7 @@
                     <div class="p-5">
                         <h2 class="display-4">All about Pride</h2>
                         <p>Explore your sexuality and get to know all about Pride!</p>
-                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="pride/pride.html">Sexuality
-                            determining quiz</a>
+                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="pride/pride.html">Pride Corner</a>
                        
                     </div>
                 </div>
@@ -122,7 +121,7 @@
                         <h2 class="display-4">Relax and meditate</h2>
                         <p>-meditation platfom</p>
                         <p>Relax and breathe out with our meditation corner</p>
-                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="meditation/index.html">MEDITATION</a>
+                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="meditation/mediPlayer.html">MEDITATION</a>
                     </div>
                 </div>
             </div>
