--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
         <div class="bg-circle-3 bg-circle"></div>
         <div class="bg-circle-4 bg-circle"></div>
 
-        <div class="alan-btn"></div>
+        <div class="alan-btn" style="margin-right: 50px;"></div>
     </header>
 
     <!-- Footer -->
