--- a/period tracker/index.html
+++ b/period tracker/index.html
@@ -29,7 +29,7 @@
         <button class="button button-accept" data-target="accept" onclick="predictDates()">Predict your next
             period</button>
     </div>
-    <div style="display: flex; justify-content:space-around;">
+    <div style="display: flex; justify-content:space-around; margin-top: -60px;">
         <div class="col-lg-4 col-sm-4 col-md-4 col-xl-4 col-xs-12 container" id="cont2" style="display: none;">
             <div class="card">
                 <div class="card-body">
