add readme file

--- a/pride/pride quiz/quiz.html
+++ b/pride/pride quiz/quiz.html
@@ -14,7 +14,7 @@
 
   <div id="wrapper">
    <button id="start" onClick="questionApp();">Start quiz</button>
-   <h1>Gender quiz</h1>
+   <h1>Sexuality Quiz</h1>
   </div>
   
   <script src="questions.js"></script>
